sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: illegal start of simple expression
    } else:
          ^